fix(checkbox): high contrast accessibility improvements (#11633)
* Fixes the checkbox outline becoming hidden when it's selected.
* Fixes the checkmark and mixedmark not being visible with white-on-black settings.
* Fixes the disabled state not being visible.
* Adds a parameter to the `cdk-high-contrast` mixin that allows for targeting a specific high contrast setting.

Relates to #11623.

--- a/src/cdk/a11y/_a11y.scss
+++ b/src/cdk/a11y/_a11y.scss
@@ -22,9 +22,11 @@
  * Applies styles for users in high contrast mode. Note that this only applies
  * to Microsoft browsers. Chrome can be included by checking for the `html[hc]`
  * attribute, however Chrome handles high contrast differently.
+ * @param target Which kind of high contrast setting to target. Defaults to `active`, can be
+ *    `white-on-black` or `black-on-white`.
  */
-@mixin cdk-high-contrast {
-  @media screen and (-ms-high-contrast: active) {
+@mixin cdk-high-contrast($target: active) {
+  @media screen and (-ms-high-contrast: $target) {
     @content;
   }
 }
